Split the text file

--- a/src/app/board/board.component.html
+++ b/src/app/board/board.component.html
@@ -1,4 +1,8 @@
 <div class="container text-center mvh-100 d-flex flex-column justify-content-center">
   <input id="file-upload" type="file" accept=".txt" (change)="fileUpload($event)">
 
-  <textarea rows="4" cols="50">{{fileText}}</textarea></div>
+  <textarea rows="4" cols="50">{{fileText}}</textarea>
+
+  <button (click)="startGame()">Start the hunt!</button>
+
+</div>
