--- a/src/app/features/game/game.component.html
+++ b/src/app/features/game/game.component.html
@@ -1,8 +1,34 @@
-<div class="container text-center mvh-100 d-flex flex-column justify-content-center">
-  <input id="file-upload" type="file" accept=".txt" (change)="fileUpload($event)">
+<!-- <div class="container flex-column"> -->
+<!-- <input id="file-upload" type="file" accept=".txt" (change)="fileUpload($event)"> -->
 
-  <textarea rows="4" cols="50">{{fileText}}</textarea>
+<!-- <textarea name="text" rows="4" cols="50" readonly>{{fileText}}</textarea> -->
+<!-- <input type="text" rows="4" cols="50" readonly>{{fileText}}</textarea> -->
 
-  <button (click)="startGame()">Start the hunt!</button>
-
-</div>
+<!-- <div class="custom-file"> -->
+<!-- <input type="file" class="custom-file-input" id="customFile" (change)="fileUpload($event)">
+    <label class="custom-file-label" for="customFile">Choose file</label> -->
+<!-- <button type="button" mat-raised-button (click)="fileInput.click()">Choose File</button>
+    <input hidden (change)="fileUpload($event)" #fileInput type="file" id="file">
+    <textarea name="text" rows="4" cols="50" readonly>{{fileText}}</textarea>
+  </div> -->
+<mat-grid-list cols="1" rowHeight="2:1">
+  <div class="main-div">
+    <mat-card class="example-card">
+      <mat-card-content>
+        <mat-form-field #heroForm class="example-full-width">
+          <button mat-raised-button color="primary" (click)="fileInput.click()">
+            <mat-icon>library_add</mat-icon>
+            <span> Select</span>
+            <input #fileInput type="file" (click)="fileInput.value = null" value="" (change)="fileUpload($event)"
+              style="display:none;" />
+          </button>
+          <textarea class="app-textArea" matInput cdkTextareaAutosize #autosize="cdkTextareaAutosize"
+            [(ngModel)]="fileText" readonly></textarea>
+        </mat-form-field>
+      </mat-card-content>
+      <mat-card-actions>
+        <button mat-raised-button color="primary" style="margin:10px;" (click)="startGame()">Start the hunt!</button>
+      </mat-card-actions>
+    </mat-card>
+  </div>
+</mat-grid-list>
