File get generated

--- a/src/app/features/game/game.component.css
+++ b/src/app/features/game/game.component.css
@@ -1,12 +1,12 @@
-.example-form {
+.app-form {
     width: 100%;
 }
 
-.example-full-width {
+.app-full-width {
     width: 100%;
 }
 
-.example-card {
+.app-card {
     width: 60%;
     padding: 10px;
 }
