clean app + first UT

--- a/src/app/features/game/game.component.html
+++ b/src/app/features/game/game.component.html
@@ -12,7 +12,7 @@
     <textarea name="text" rows="4" cols="50" readonly>{{fileText}}</textarea>
   </div> -->
 <mat-grid-list cols="1" rowHeight="2:1">
-  <div class="main-div">
+  <div class="app-main-div">
     <mat-card class="app-card">
       <mat-card-content>
         <mat-form-field #fileTextForm class="app-full-width">
