Update game carbon it

--- a/src/app/features/game/game.component.css
+++ b/src/app/features/game/game.component.css
@@ -2,12 +2,16 @@
     width: 100%;
 }
 
+.app-background {
+    background-color: #ebebeb;
+}
+
 .app-full-width {
     width: 100%;
 }
 
 .app-card {
-    width: 60%;
+    width: 100%;
     padding: 10px;
 }
 
